--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,8 +21,8 @@ spring.mvc.view.suffix=.jsp
 spring.servlet.multipart.max-file-size=1280KB
 spring.servlet.multipart.max-request-size=1280KB
 
-server.port=8443
-server.ssl.key-store-password=Thierry
-server.ssl.key-store=src/main/resources/keystore.p12
-server.ssl.key-store-provider=SUN
-server.ssl.key-store-type=PKCS12
+server.port=$PORT
+#server.ssl.key-store-password=Thierry
+#server.ssl.key-store=src/main/resources/keystore.p12
+#server.ssl.key-store-provider=SUN
+#server.ssl.key-store-type=PKCS12
