--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,9 @@ spring.datasource.url=jdbc:postgres://jhxesuunghnrnb:82ffcee02cb4bb634af73379884
 spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialect
-
-soring.h2.console.enabled=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
 
 
 spring.mvc.view.prefix=WEB-INF/view/
