--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,10 @@
 			<version>1.3.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+		</dependency>
 
 
 	</dependencies>
